--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple little framework to create an autoresponder bot for telegram.",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/Xfox1/telegrambotfautoresponder/issues"
   },
-  "homepage": "https://github.com/Xfox1/telegrambotfautoresponder#readme"
+  "homepage": "https://github.com/Xfox1/telegrambotfautoresponder#readme",
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "node-telegram-bot-api": "^0.30.0"
+  }
 }
